# ferricc

./: Cargo.toml  LICENSE  README.md  run_all_tests.ps1  run_test.ps1  test.ps1
include/: stdio.h
src/: ast.rs  codegen.rs  error.rs  lexer.rs  main.rs  parser.rs  preprocessor.rs  typechecker.rs
tests/: exit_code.c  fact5.c  fact5_print.c  factorial_arg.c  fib5_noprt.c  fib5_print.c  fib5_simple.c  fib5_simple_func.c  hello.c  hello_printf.c  hello_puts.c  pointer_complex.c  pointer_simple.c  simple_printf.c  simple_recursive.c
