[package]
name = "ferricc"
version = "0.1.0"
edition = "2021"
description = "A Rust-based C compiler named after Ferris the crab"
authors = ["abbychau"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
regex = "1.10"
